--- a/.cloudbuild/deploy-to-prod.yaml
+++ b/.cloudbuild/deploy-to-prod.yaml
@@ -29,7 +29,7 @@ steps:
       - $_PROD_PROJECT_ID
 
 substitutions:
-  _PROD_PROJECT_ID: YOUR_PROD_PROJECT_ID
+  _PROD_PROJECT_ID: qwiklabs-gcp-03-ec92c6095411
   _REGION: europe-west2
 
 logsBucket: gs://${PROJECT_ID}-infrastructure-genie-logs-data/build-logs
