--- a/.cloudbuild/staging.yaml
+++ b/.cloudbuild/staging.yaml
@@ -127,7 +127,7 @@ steps:
         echo "_________________________________________________________________________"
 
 substitutions:
-  _STAGING_PROJECT_ID: YOUR_STAGING_PROJECT_ID
+  _STAGING_PROJECT_ID: qwiklabs-gcp-03-ec92c6095411
   _REGION: europe-west2
 
 logsBucket: gs://${PROJECT_ID}-infrastructure-genie-logs-data/build-logs
