--- a/.cloudbuild/deploy-to-prod.yaml
+++ b/.cloudbuild/deploy-to-prod.yaml
@@ -32,7 +32,4 @@ substitutions:
   _PROD_PROJECT_ID: qwiklabs-gcp-03-ec92c6095411
   _REGION: europe-west2
 
-logsBucket: gs://${PROJECT_ID}-infrastructure-genie-logs-data/build-logs
-options:
-  substitutionOption: ALLOW_LOOSE
-  defaultLogsBucketBehavior: REGIONAL_USER_OWNED_BUCKET
+logging: CLOUD_LOGGING_ONLY
