--- a/.cloudbuild/pr_checks.yaml
+++ b/.cloudbuild/pr_checks.yaml
@@ -46,6 +46,4 @@ steps:
     env:
       - 'PATH=/usr/local/bin:/usr/bin:~/.local/bin'
 
-logsBucket: gs://${PROJECT_ID}-infrastructure-genie-logs-data/build-logs
-options:
-  defaultLogsBucketBehavior: REGIONAL_USER_OWNED_BUCKET
+logging: CLOUD_LOGGING_ONLY
