Refactor logging configuration to use options for CLOUD_LOGGING_ONLY in deployment files

--- a/.cloudbuild/pr_checks.yaml
+++ b/.cloudbuild/pr_checks.yaml
@@ -46,4 +46,5 @@ steps:
     env:
       - 'PATH=/usr/local/bin:/usr/bin:~/.local/bin'
 
-logging: CLOUD_LOGGING_ONLY
+options:
+  logging: CLOUD_LOGGING_ONLY
