--- a/.cloudbuild/deploy-to-prod.yaml
+++ b/.cloudbuild/deploy-to-prod.yaml
@@ -32,4 +32,5 @@ substitutions:
   _PROD_PROJECT_ID: qwiklabs-gcp-03-ec92c6095411
   _REGION: europe-west2
 
-logging: CLOUD_LOGGING_ONLY
+options:
+  logging: CLOUD_LOGGING_ONLY
