--- a/.cloudbuild/staging.yaml
+++ b/.cloudbuild/staging.yaml
@@ -129,7 +129,7 @@ steps:
 substitutions:
   _STAGING_PROJECT_ID: qwiklabs-gcp-03-ec92c6095411
   _REGION: europe-west2
-  _ARTIFACT_REGISTRY_REPO_NAME: infra-genie
+  _ARTIFACT_REGISTRY_REPO_NAME: infrastructure-genie
   _CONTAINER_NAME: infrastructure-genie
 
 options:
