--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,14 @@ dependencies = [
     "fastapi~=0.115.8",
     "uvicorn~=0.34.0",
     "psycopg2-binary>=2.9.10",
+    "google-generativeai>=0.8.5",
+    "google-genai>=1.30.0",
+    "llama-index>=0.11.0",
+    "diagrams>=0.24.0",
+    "graphviz>=0.20.0",
+    "google-cloud-aiplatform>=1.64.0",
+    "scikit-learn>=1.3.0",
+    "numpy>=1.24.0",
 ]
 
 requires-python = ">=3.10,<3.14"
