--- a/.cloudbuild/staging.yaml
+++ b/.cloudbuild/staging.yaml
@@ -82,6 +82,8 @@ steps:
       - "--project"
       - "${_STAGING_PROJECT_ID}"
       - "--allow-unauthenticated"
+      - "--set-secrets"
+      - "GITHUB_PERSONAL_ACCESS_TOKEN=github-pat:latest"
 
   # Deploy terraform-mcp-server to Staging (Public)
   - name: "gcr.io/cloud-builders/gcloud"
@@ -203,11 +205,11 @@ steps:
 
 substitutions:
   _STAGING_PROJECT_ID: qwiklabs-gcp-03-ec92c6095411
-  _REGION: europe-west2
+  _REGION: europe-west4
   _ARTIFACT_REGISTRY_REPO_NAME: infrastructure-genie
   _CONTAINER_NAME: infrastructure-genie
-  _ADO_ORG_URL: your-ado-org-url-here
-  _ADO_PROJECT: your-ado-project-here
+  _ADO_ORG_URL: "https://dev.azure.com/1000045978"
+  _ADO_PROJECT: "https://dev.azure.com/1000045978/adk-hackathon"
 
 options:
   logging: CLOUD_LOGGING_ONLY
