feat: Update Terraform Docs MCP URL and implement FastAPI wrapper for MCP server

--- a/mcp-servers/azure-devops/Dockerfile
+++ b/mcp-servers/azure-devops/Dockerfile
@@ -1,14 +1,18 @@
-# Use an official Node.js runtime as a parent image
 FROM node:20-slim
+
+# Install Python and pip for FastAPI
+RUN apt-get update && apt-get install -y python3 python3-pip && rm -rf /var/lib/apt/lists/*
+RUN pip3 install --no-cache-dir fastapi uvicorn
 
 WORKDIR /usr/src/app
 
-# Copy the entrypoint script and make it executable
+# Copy the entrypoint script and wrapper
 COPY entrypoint.sh .
+COPY wrapper.py .
 RUN chmod +x entrypoint.sh
 
 # Set the entrypoint
 ENTRYPOINT ["./entrypoint.sh"]
 
-# The command to run the server, which will be passed to the entrypoint script
-CMD ["npx", "-y", "@wangkanai/devops-mcp"]
+# The command to run the wrapper, which will then manage the npx process
+CMD ["uvicorn", "wrapper:app", "--host", "0.0.0.0", "--port", "8080"]
