chore: Update Dockerfile for improved FastAPI setup and entrypoint configuration

--- a/mcp-servers/azure-devops/Dockerfile
+++ b/mcp-servers/azure-devops/Dockerfile
@@ -2,7 +2,7 @@ FROM node:20-slim
 
 # Install Python and pip for FastAPI
 RUN apt-get update && apt-get install -y python3 python3-pip && rm -rf /var/lib/apt/lists/*
-RUN pip3 install --no-cache-dir fastapi uvicorn
+RUN pip3 install --no-cache-dir fastapi uvicorn --break-system-packages
 
 WORKDIR /usr/src/app
 
