--- a/mcp-servers/azure-devops/Dockerfile
+++ b/mcp-servers/azure-devops/Dockerfile
@@ -7,6 +7,9 @@ RUN npm install -g @wangkanai/devops-mcp
 # Stage 2: Build the Python wrapper application
 FROM python:3.11-slim-buster AS python_wrapper
 
+# Install Node.js and npm in the Python stage
+RUN apt-get update && apt-get install -y nodejs npm && rm -rf /var/lib/apt/lists/*
+
 # Install FastAPI and Uvicorn
 RUN pip install --no-cache-dir fastapi uvicorn --break-system-packages
 
