--- a/.cloudbuild/staging.yaml
+++ b/.cloudbuild/staging.yaml
@@ -85,6 +85,8 @@ steps:
       - "--allow-unauthenticated"
       - "--set-secrets"
       - "GITHUB_PERSONAL_ACCESS_TOKEN=github-pat:latest"
+      - "--memory=1Gi"
+      - "--timeout=600"
 
   # Deploy terraform-mcp-server to Staging (Public)
   - name: "gcr.io/cloud-builders/gcloud"
@@ -132,7 +134,7 @@ steps:
       - "-c"
       - |
         echo $(gcloud run services describe infrastructure-genie \
-        --region ${_REGION} --project ${_STAGING_PROJECT_ID} --format='value(status.url') > staging_url.txt
+        --region ${_REGION} --project ${_STAGING_PROJECT_ID} --format='value(status.url)') > staging_url.txt
 
   # Fetch ID Token
   - name: "gcr.io/cloud-builders/gcloud"
@@ -152,7 +154,7 @@ steps:
       - |
         export _ID_TOKEN=$(cat id_token.txt)
         export _STAGING_URL=$(cat staging_url.txt)
-        pip install locust==2.25.1 --user
+        pip install locust==2.31.1 --user
         locust -f tests/load_test/load_test.py \
         --headless \
         -H $$_STAGING_URL \
