--- a/agents/galaxy_agent/Dockerfile
+++ b/agents/galaxy_agent/Dockerfile
@@ -9,7 +9,7 @@ COPY . .
 # If using pyproject.toml with uv, use: RUN uv sync --frozen
 # If using requirements.txt, use: RUN pip install --no-cache-dir -r requirements.txt
 # For this example, let's assume uv is used and pyproject.toml is present
-RUN pip install uv && uv sync --frozen
+RUN pip install uv && uv sync
 
 EXPOSE 8080
 
