--- a/agents/galaxy_agent/Dockerfile
+++ b/agents/galaxy_agent/Dockerfile
@@ -13,4 +13,4 @@ RUN pip install uv && uv sync
 
 EXPOSE 8080
 
-CMD ["uvicorn", "app.server:app", "--host", "0.0.0.0", "--port", "8080"]
+CMD ["uv", "run", "uvicorn", "app.server:app", "--host", "0.0.0.0", "--port", "8080"]
