fix: Update Dockerfile to copy only essential project files for galaxy_agent

--- a/agents/galaxy_agent/Dockerfile
+++ b/agents/galaxy_agent/Dockerfile
@@ -2,8 +2,10 @@ FROM python:3.11-slim
 
 WORKDIR /app_root
 
-# Copy the entire galaxy project structure
-COPY . .
+# Copy essential project files for galaxy_agent from the build context (project root)
+COPY agents/galaxy_agent/pyproject.toml .
+COPY agents/galaxy_agent/uv.lock .
+COPY agents/galaxy_agent/app ./app
 
 # Install dependencies (assuming pyproject.toml or requirements.txt exists)
 # If using pyproject.toml with uv, use: RUN uv sync --frozen
