fix: Update azure-devops dependency to use the specific beta version 7.1.0b4

--- a/agents/galaxy_agent/pyproject.toml
+++ b/agents/galaxy_agent/pyproject.toml
@@ -18,7 +18,7 @@ dependencies = [
     "aiofiles>=23.0.0",
     "python-multipart>=0.0.6",
     "PyGithub>=2.1.0",
-    "azure-devops>=7.1.0",
+    "azure-devops~=7.1.0b4",
     "requests>=2.31.0",
     "GitPython>=3.1.40",
 ]
