feat: Implement Intelligent Code Generator for Infrastructure Genie
- Added IntelligentCodeGenerator class to generate high-quality code based on user requirements.
- Integrated multiple sources for code generation including GitHub, Microsoft Learn, Terraform Docs, and web search.
- Supported multiple programming languages: Python, JavaScript, TypeScript, Java, Go, and Terraform.
- Implemented GitHub workflow automation for committing code and creating pull requests.
- Added functionality for generating tests and documentation alongside the code.
- Included context gathering from existing repositories to enhance code generation accuracy.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "Your Name", email = "your@email.com"},
 ]
 dependencies = [
-    "google-adk~=1.8.0",
+    "google-adk>=1.8.0",
     "opentelemetry-exporter-gcp-trace~=1.9.0",
     "google-cloud-logging~=3.11.4",
     "google-cloud-aiplatform[evaluation]~=1.106.0",
