--- a/agents/galaxy_agent/pyproject.toml
+++ b/agents/galaxy_agent/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "Your Name", email = "your@email.com"},
 ]
 dependencies = [
-    "google-adk~=1.8.0",
+    "google-adk~=1.7.0",
     "python-dotenv>=1.0.0",
     "opentelemetry-exporter-gcp-trace~=1.9.0",
     "google-cloud-logging>=3.12.0",
@@ -17,7 +17,7 @@ dependencies = [
     "google-generativeai>=0.8.5",
     "aiofiles>=23.0.0",
     "python-multipart>=0.0.6",
-    "PyGithub>=2.1.0",
+    "pygithub>=2.1.0",
     "azure-devops~=7.1.0b4",
     "requests>=2.31.0",
     "GitPython>=3.1.40",
